SERVER-21330 Incorrect $type explain/diagnostic output for "number"